--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <p class="logo-paragraf">Kajetan Stachowski</p>
                 </div>
             </div>
-            <ul class="links">
+            <ul class="links light">
                 <li class="link"><a href="">O mnie</a></li>
                 <li class="link"><a href="">Portfolio</a></li>
                 <li class="link"><a href="">Kontakt</a></li>
@@ -32,10 +32,13 @@
             </div>
         </nav>
         <div class="header-container">
-            <div class="text">
+            <div class="text-container1" id="text1">
                 <h2>Kajetan Stachowski</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit est eius voluptatibus culpa dignissimos illum doloremque commodi iusto, sunt provident praesentium sapiente, tenetur maiores, dolores sint? Quibusdam nesciunt quam tempore quisquam obcaecati nisi architecto nam possimus, suscipit, pariatur aut </p>
-
+            </div>
+            <div class="text-container2" id="text2">
+                <h2>Kajetan Stachowski</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit est eius voluptatibus culpa dignissimos illum doloremque commodi iusto, sunt provident praesentium sapiente, tenetur maiores, dolores sint? Quibusdam nesciunt quam tempore quisquam obcaecati nisi architecto nam possimus, suscipit, pariatur aut </p>
             </div>
             <!-- <div class="position">
                 <img src="src/person-transparent-background-12.png" alt="" class="person-img">
